--- a/app/src/main/res/layout/fragment_credits.xml
+++ b/app/src/main/res/layout/fragment_credits.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="Application Credits"
+                android:text="@string/credits_title"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/theme_textblack"
@@ -39,7 +39,7 @@
                 android:layout_marginRight="10sp"
                 android:background="@color/theme_yellow"
                 android:fontFamily="@font/poppins"
-                android:text="API Documentation"
+                android:text="@string/api_doc_title"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
-                android:text="The API's used in this application are:"
+                android:text="@string/api_list"
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -61,7 +61,7 @@
                 android:layout_margin="15sp"
                 android:backgroundTint="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="Picasso for Image Loading"
+                android:text="@string/picasso_button"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -73,7 +73,7 @@
                 android:layout_margin="15sp"
                 android:backgroundTint="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="Google Code Scanner for UPC Scanning"
+                android:text="@string/google_button"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -85,7 +85,7 @@
                 android:layout_margin="15sp"
                 android:backgroundTint="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="BorjaBravo's READMORE Textview Extension on GitHub"
+                android:text="@string/readmore_button"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -96,7 +96,7 @@
                 android:layout_margin="15sp"
                 android:backgroundTint="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="EBay Product API for Product Fetching"
+                android:text="@string/ebay_button"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -109,7 +109,7 @@
                 android:layout_marginRight="10sp"
                 android:background="@color/theme_yellow"
                 android:fontFamily="@font/poppins"
-                android:text="Content Sources"
+                android:text="@string/content_title"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
                 android:fontFamily="@font/poppins"
-                android:text="The textual content in this application is created by ourselves. The intents use external websites which are refrenced in the intent buttons which launch them. The app logo is created by us and any other documentation we used comes from the Android Developers Website."
+                android:text="@string/content_text"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -133,7 +133,7 @@
                 android:layout_marginRight="10sp"
                 android:background="@color/theme_yellow"
                 android:fontFamily="@font/poppins"
-                android:text="Final Messages"
+                android:text="@string/final_messages"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -144,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
                 android:fontFamily="@font/poppins"
-                android:text="Thank you for using our application! If you are ready to start your retail arbitrage endeavours then click the button below to find a nearby location to source for products. Happy Flipping!"
+                android:text="@string/final_message_content"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -155,7 +155,7 @@
                 android:layout_margin="15sp"
                 android:backgroundTint="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="Local Sourcing Location"
+                android:text="@string/sourcing_location_button"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
