--- a/app/src/main/res/layout/fragment_view_pager_host.xml
+++ b/app/src/main/res/layout/fragment_view_pager_host.xml
@@ -11,8 +11,10 @@
         android:id="@+id/vpHost"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#D5D0D0"
+        android:background="?attr/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/gallery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
