--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/alatsi</item>
         <item>@font/alegreya_sans</item>
         <item>@font/poppins</item>
+        <item>@font/poppins_bold</item>
     </array>
 </resources>
