--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,16 +12,16 @@
         <item
             android:id="@+id/nav_recycler"
             android:icon="@drawable/ic_baseline_list_24"
-            android:title="My Products" />
+            android:title="@string/nav_products_title" />
         <item
             android:id="@+id/nav_stats"
             android:icon="@drawable/ic_baseline_query_stats_24"
-            android:title="Statistics"
+            android:title="@string/nav_statistics_title"
             />
         <item
             android:id="@+id/nav_credits"
             android:icon="@drawable/ic_baseline_copyright_24"
-            android:title="Credits"
+            android:title="@string/nav_credits_title"
             />
     </group>
 </menu>
